--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,7 +1,8 @@
 body {
 
     &.dark__theme {
-        background-color: #04002b;
+        // background-color: #04002b;
+        background-color: #303030;
     }
 }
 
